knowledge/training_runs/run_20260105_063017/logs/https___www_aliexpress_com__test_log.txt
🚀 Starting autonomous test for https://www.aliexpress.com/
Both GOOGLE_API_KEY and GEMINI_API_KEY are set. Using GOOGLE_API_KEY.
Both GOOGLE_API_KEY and GEMINI_API_KEY are set. Using GOOGLE_API_KEY.
Both GOOGLE_API_KEY and GEMINI_API_KEY are set. Using GOOGLE_API_KEY.
Both GOOGLE_API_KEY and GEMINI_API_KEY are set. Using GOOGLE_API_KEY.
🤖 CI Environment detected: Forcing Headless Mode
🚀 Explorer: Starting Strategy 2026. Goal: Autonomous smoke test: Navigate site, explore main features, verify key elements

--- Step 1 ---
🔍 Mining Page (2026 Strategy): https://www.aliexpress.com///_____tmd_____/punish?x5secdata=xff_xcQxxW9OM4gp_vtkvCzkYHAAk460Yg0awMaG3tARTLVQZx6WkSvhVt_KgSKzCffMcPtSCXjPJGd9Bj5uIuu2JugqKHDzwpR5nHBjOvx8JmVA_9DWMcDyj4Ha8euh1ssXC_644S3x5dSJrUGvdI7l2U8V4XIGu3JDwaIti2egNrw3JLxGLN1CJXS7oo2I2BArdi2LVlqO3RyP6a1v3CVMfsjghujCd-9kAR7k8LgcYxlWtSN53jsC1qFJIgMdcX4-e5XjQwTw0g6TwUhfjyPZxQLNoSN-gR3mBS9-B0YcZ04G32UeFefNs6u7OLyaVb7KiSqkq36Er8mi7daFr3B3fRnxvn6mmMIFeMP6wqFBOjG-zYrj07gxKdkvzdkEOBVMc4hTqtcmnta0GOLywSWVizUZSB-nAlvRvdRPUExcA3PCxeWOYR9BpnCTRmhQ_7uEFGT02V3K3JPYEnYmGFn5X_CvQ-XiRQKY-TEk4yUUp5LRUrTsKYvqkVjCgVxARrI8Ppu3ssqXaEvLICAlFnxMhHWW2C9DfD_3tRhkzLH4IUE-YpJeBiKfJOmLVGHQfgdIx5MklwRTMLE65zL_mnoUeOTiEm0FA9gWnqxZqaOd1TASEZdH533x1CXSEUqf931TGWmH-N27lfa4lg19y5CSIlDvDKtNMZZY6m7RY36tLkhGTENZwpWGyKyAWMhfnWGrTVxMvUT22g2z4jRs1mPXvkW7Gl6sLE5wwq5LxsBMmIggENPnD2kWwUscG3e1KTY4xsJdkss7czF94Voe-BnYnfHfwCH92gbIOFMq7dKmTPpTzkyYG7BDwXZhc9vq4s__bx__www.aliexpress.com%2f&x5step=1
📍 On Page: AliExpress - Unusual Traffic Detection
🤔 State: error
📡 Sending 11 elements to the Planner...
💭 Thought: The current page indicates unusual traffic detection, preventing further navigation. Since the goal is to navigate and explore, but I cannot proceed past this security check, I will skip attempting to bypass it and instead indicate that the goal cannot be achieved in this state.
✅ Goal Achieved!
💾 Trace saved to projects/https___www_aliexpress_com__regression/outputs/trace.json
  File "/home/runner/work/build_qa_automation/build_qa_automation/core/refiner.py", line 71
    - Syntax: `smart_action(page, """playwright_locator_string""", "action_type", value="optional_value")`
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax
Both GOOGLE_API_KEY and GEMINI_API_KEY are set. Using GOOGLE_API_KEY.
🚀 Triggering agent with config: /home/runner/work/build_qa_automation/build_qa_automation/projects/https___www_aliexpress_com__regression/config.json
🚀 Starting Autonomous Pipeline for https___www_aliexpress_com__regression...

[Step 0/7] 📋 Strategic Test Planning...
⚠️ Pre-Planning Failed: attempted relative import with no known parent package
📝 Failure logged to knowledge/failures.json

[Step 1/7] 🗺️  Exploring & Mining (Plan-Guided)...

[Step 2/7] 📖 Updating Knowledge Bank...
📖 Knowledge Bank updated for www.aliexpress.com

[Step 3/7] 💻 Generating Robust Code...
❌ Code Generation Failed!
📝 Failure logged to knowledge/failures.json
✅ POM Structure generated: projects/https___www_aliexpress_com__regression/outputs/pom_structure.json
{
  "base_url": "https://www.aliexpress.com/",
  "workflow": "Autonomous smoke test: Navigate site, explore main features, verify key elements",
  "pages": [],
  "tests": [
    {
      "name": "test_workflow_execution",
      "description": "Autonomous smoke test: Navigate site, explore main features, verify key elements",
      "steps_description": [],
      "page_objects": [],
      "actions": [],
      "assertions": [
        {
          "code": "expect(page).to_have_url(re.compile(\".*\"))",
          "comment": "Verify page navigation successful"
        }
      ]
    }
  ]
}
✅ Generated: projects/https___www_aliexpress_com__regression/pages/base_page.py
✅ Generated: projects/https___www_aliexpress_com__regression/pages/__init__.py
✅ Generated: projects/https___www_aliexpress_com__regression/tests/e2e/test_main.py

🎉 POM Generation Complete!
📁 Pages: 0 files
📝 Tests: 1 files
============================= test session starts ==============================
platform linux -- Python 3.11.14, pytest-9.0.2, pluggy-1.6.0 -- /opt/hostedtoolcache/Python/3.11.14/x64/bin/python
cachedir: .pytest_cache
metadata: {'Python': '3.11.14', 'Platform': 'Linux-6.11.0-1018-azure-x86_64-with-glibc2.39', 'Packages': {'pytest': '9.0.2', 'pluggy': '1.6.0'}, 'Plugins': {'html': '4.1.1', 'base-url': '2.1.0', 'anyio': '4.12.0', 'playwright': '0.7.2', 'metadata': '3.1.1', 'langsmith': '0.6.0'}, 'CI': 'true', 'JAVA_HOME': '/usr/lib/jvm/temurin-17-jdk-amd64', 'Base URL': ''}
rootdir: /home/runner/work/build_qa_automation/build_qa_automation
plugins: html-4.1.1, base-url-2.1.0, anyio-4.12.0, playwright-0.7.2, metadata-3.1.1, langsmith-0.6.0
collecting ... collected 1 item

projects/https___www_aliexpress_com__regression/tests/e2e/test_main.py::test_workflow_execution[chromium] PASSED [100%]

- Generated html report: file:///home/runner/work/build_qa_automation/build_qa_automation/projects/https___www_aliexpress_com__regression/outputs/pytest_report.html -
============================== 1 passed in 1.01s ===============================
